# soundkonverter

./: .gitignore  TODO
src/: CHANGELOG  CMakeLists.txt  aboutplugins.cpp  aboutplugins.h  codecoptimizations.cpp  codecoptimizations.h  codecproblems.cpp  codecproblems.h  combobutton.cpp  common.h  config.cpp  convert.cpp  convertitem.cpp  filelist.cpp  filelistitem.h  global.cpp  global.h  logger.cpp  logger.h  logviewer.cpp  logviewer.h  main.cpp  options.cpp  optionsdetailed.cpp  optionslayer.cpp  optionssimple.cpp  outputdirectory.cpp  outputdirectory.h  pluginloader.cpp  pluginloader.h  progressindicator.cpp  soundkonverter.cpp  soundkonverter.h  soundkonverterapp.cpp  soundkonverterapp.h  soundkonverterview.cpp  soundkonverterview.h  version.h  version.h.in
src/cmake/modules/: FindKCddb6.cmake  FindKF6Cddb.cmake
src/configdialog/: configadvancedpage.cpp  configadvancedpage.h  configbackendspage.cpp  configcoverartpage.cpp  configdialog.cpp  configgeneralpage.cpp
src/core/: backendplugin.cpp  backendplugin.h  codecplugin.h  codecwidget.h  conversionoptions.h  replaygainplugin.h  ripperplugin.h
src/metadata/: tagengine.cpp  tagengine.h
src/opener/: cdopener.cpp  cdopener.h  diropener.cpp  diropener.h  fileopener.cpp  fileopener.h  playlistopener.cpp  playlistopener.h  urlopener.cpp  urlopener.h
src/plugins/soundkonverter_codec_aften/: CMakeLists.txt  aftencodecwidget.cpp
src/plugins/soundkonverter_codec_faac/: CMakeLists.txt  faaccodecwidget.cpp
src/plugins/soundkonverter_codec_ffmpeg/: CMakeLists.txt  ffmpegcodecwidget.cpp  soundkonverter_codec_ffmpeg.cpp  soundkonverter_codec_ffmpeg.h
src/plugins/soundkonverter_codec_flac/: CMakeLists.txt  flaccodecwidget.cpp
src/plugins/soundkonverter_codec_flake/: CMakeLists.txt  flakecodecwidget.cpp
src/plugins/soundkonverter_codec_fluidsynth/: CMakeLists.txt  fluidsynthcodecwidget.cpp  soundkonverter_codec_fluidsynth.cpp  soundkonverter_codec_fluidsynth.h
src/plugins/soundkonverter_codec_lame/: CMakeLists.txt  lamecodecwidget.cpp  soundkonverter_codec_lame.cpp  soundkonverter_codec_lame.h
src/plugins/soundkonverter_codec_libav/: CMakeLists.txt  libavcodecwidget.cpp  soundkonverter_codec_libav.cpp  soundkonverter_codec_libav.h
src/plugins/soundkonverter_codec_mac/: CMakeLists.txt  maccodecwidget.cpp
src/plugins/soundkonverter_codec_mplayer/: CMakeLists.txt
src/plugins/soundkonverter_codec_musepack/: CMakeLists.txt  musepackcodecwidget.cpp  soundkonverter_codec_musepack.cpp
src/plugins/soundkonverter_codec_neroaac/: CMakeLists.txt  neroaaccodecwidget.cpp
src/plugins/soundkonverter_codec_opustools/: CMakeLists.txt  opustoolscodecwidget.cpp  soundkonverter_codec_opustools.cpp  soundkonverter_codec_opustools.h
src/plugins/soundkonverter_codec_shorten/: CMakeLists.txt  shortencodecwidget.cpp
src/plugins/soundkonverter_codec_speex/: CMakeLists.txt  speexcodecwidget.cpp
src/plugins/soundkonverter_codec_timidity/: CMakeLists.txt  timiditycodecwidget.cpp
src/plugins/soundkonverter_codec_ttaenc/: CMakeLists.txt  ttaenccodecwidget.cpp
src/plugins/soundkonverter_codec_twolame/: CMakeLists.txt  soundkonverter_codec_twolame.cpp  soundkonverter_codec_twolame.h  twolamecodecwidget.cpp
src/plugins/soundkonverter_codec_vorbistools/: CMakeLists.txt  vorbistoolscodecwidget.cpp
src/plugins/soundkonverter_codec_wavpack/: CMakeLists.txt  wavpackcodecwidget.cpp
src/plugins/soundkonverter_filter_normalize/: CMakeLists.txt  normalizefilterwidget.cpp
src/plugins/soundkonverter_filter_sox/: CMakeLists.txt  soundkonverter_filter_sox.cpp  soundkonverter_filter_sox.h  soxcodecwidget.cpp  soxeffectwidget.cpp  soxfilterwidget.cpp
src/plugins/soundkonverter_replaygain_aacgain/: CMakeLists.txt  soundkonverter_replaygain_aacgain.cpp  soundkonverter_replaygain_aacgain.h
src/plugins/soundkonverter_replaygain_metaflac/: CMakeLists.txt  soundkonverter_replaygain_metaflac.cpp  soundkonverter_replaygain_metaflac.h
src/plugins/soundkonverter_replaygain_mp3gain/: CMakeLists.txt  soundkonverter_replaygain_mp3gain.cpp  soundkonverter_replaygain_mp3gain.h
src/plugins/soundkonverter_replaygain_musepack/: CMakeLists.txt  soundkonverter_replaygain_musepackgain.cpp  soundkonverter_replaygain_musepackgain.h
src/plugins/soundkonverter_replaygain_vorbisgain/: CMakeLists.txt  soundkonverter_replaygain_vorbisgain.cpp  soundkonverter_replaygain_vorbisgain.h
src/plugins/soundkonverter_replaygain_wvgain/: CMakeLists.txt  soundkonverter_replaygain_wvgain.cpp  soundkonverter_replaygain_wvgain.h
src/plugins/soundkonverter_ripper_cdparanoia/: CMakeLists.txt  soundkonverter_ripper_cdparanoia.cpp  soundkonverter_ripper_cdparanoia.h
src/plugins/soundkonverter_ripper_icedax/: CMakeLists.txt  soundkonverter_ripper_icedax.cpp  soundkonverter_ripper_icedax.h
src/replaygainscanner/: replaygainfilelist.cpp  replaygainfilelist.h  replaygainfilelistitem.cpp  replaygainfilelistitem.h  replaygainprocessor.cpp  replaygainscanner.cpp  replaygainscanner.h
